Adding MEME generator customer element written in ES2015

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -38,3 +38,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../styles/app-theme.html">
 <link rel="import" href="my-greeting/my-greeting.html">
 <link rel="import" href="my-list/my-list.html">
+<link rel="import" href="awesome-meme/awesome-meme.html">
