Adding back the text in the second card.

--- a/app/index.html
+++ b/app/index.html
@@ -125,6 +125,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 <p class="paper-font-body2">Looking for more Web App layouts? Check out our <a href="https://github.com/PolymerElements/app-layout-templates">layouts</a> collection. You can also <a href="http://polymerelements.github.io/app-layout-templates/">preview</a> them live.</p>
               </paper-material>
               <paper-material elevation="1">
+                <p class="paper-font-body2">This is another card.</p>
                 <awesome-meme top="ES2015" bottom="is awesome!"></awesome-meme>
               </paper-material>
 
