--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -10,32 +10,25 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <script src="../../bower_components/page/page.js"></script>
 <script>
-  window.addEventListener('WebComponentsReady', function() {
+  window.addEventListener('WebComponentsReady', () => {
 
     // We use Page.js for routing. This is a Micro
     // client-side router inspired by the Express router
     // More info: https://visionmedia.github.io/page.js/
-    page('/', function () {
-      app.route = 'home';
-    });
+    page('/', () => app.route = 'home');
 
-    page('/users', function () {
-      app.route = 'users';
-    });
+    page('/users', () => app.route = 'users');
 
-    page('/users/:name', function (data) {
+    page('/users/:name', data => {
       app.route = 'user-info';
       app.params = data.params;
     });
 
-    page('/contact', function () {
-      app.route = 'contact';
-    });
+    page('/contact', () => app.route = 'contact');
 
     // add #! before urls
     page({
       hashbang: true
     });
-
   });
 </script>
