--- a/app/elements/my-list/my-list.html
+++ b/app/elements/my-list/my-list.html
@@ -23,27 +23,29 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   </template>
 
   <script>
-    (function () {
-      Polymer({
-        is: 'my-list',
-        properties: {
+    class MyList {
+      get is() { return 'my-list'; }
+      get properties() {
+        return {
           items: {
             type: Array,
             notify: true,
           }
-        },
-        ready: function() {
-          this.items = [
-            'Responsive Web App boilerplate',
-            'Iron Elements and Paper Elements',
-            'End-to-end Build Tooling (including Vulcanize)',
-            'Unit testing with Web Component Tester',
-            'Routing with Page.js',
-            'Offline support with the Platinum Service Worker Elements'
-          ];
-        }
-      });
-    })();
+        };
+      }
+      ready() {
+        this.items = [
+          'Responsive Web App boilerplate',
+          'Iron Elements and Paper Elements',
+          'End-to-end Build Tooling (including Vulcanize)',
+          'Unit testing with Web Component Tester',
+          'Routing with Page.js',
+          'Offline support with the Platinum Service Worker Elements'
+        ];
+      }
+    }
+
+    Polymer(MyList.prototype); // jshint ignore:line
   </script>
 
 </dom-module>
