--- a/app/elements/awesome-meme/awesome-meme.html
+++ b/app/elements/awesome-meme/awesome-meme.html
@@ -65,7 +65,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     /* Pending some Polymer changes this will/should be:
 
      class AwesomeMeme {
-       registered {
+       registered() {
          this.is = 'awesome-meme';
          this.properties = {
            top: {
