small tweak on ES6 version of routing.html

--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -10,7 +10,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <script src="../../bower_components/page/page.js"></script>
 <script>
-  window.addEventListener('WebComponentsReady', () => {
+  window.addEventListener('WebComponentsReady', e => {
 
     // We use Page.js for routing. This is a Micro
     // client-side router inspired by the Express router
