--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -36,6 +36,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <!-- Add your elements here -->
 <link rel="import" href="../styles/app-theme.html">
+<link rel="import" href="../styles/shared-styles.html">
 <link rel="import" href="my-greeting/my-greeting.html">
 <link rel="import" href="my-list/my-list.html">
 <link rel="import" href="awesome-meme/awesome-meme.html">
