--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -10,21 +10,31 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <script src="../../bower_components/page/page.js"></script>
 <script>
-  window.addEventListener('WebComponentsReady', e => {
+  window.addEventListener('WebComponentsReady', () => {
 
     // We use Page.js for routing. This is a Micro
     // client-side router inspired by the Express router
     // More info: https://visionmedia.github.io/page.js/
-    page('/', () => app.route = 'home');
+    page('/', () => {
+      app.route = 'home';
+      app.scrollPageToTop();
+    });
 
-    page('/users', () => app.route = 'users');
+    page('/users', () => {
+      app.route = 'users';
+      app.scrollPageToTop();
+    });
 
     page('/users/:name', data => {
       app.route = 'user-info';
       app.params = data.params;
+      app.scrollPageToTop();
     });
 
-    page('/contact', () => app.route = 'contact');
+    page('/contact', () => {
+      app.route = 'contact';
+      app.scrollPageToTop();
+    });
 
     // add #! before urls
     page({
