Update PSK. Make gulp:serve dist work

--- a/app/elements/my-greeting/my-greeting.html
+++ b/app/elements/my-greeting/my-greeting.html
@@ -7,37 +7,44 @@ The complete set of contributors may be found at http://polymer.github.io/CONTRI
 Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
+
 <link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/paper-styles/typography.html">
 
 <dom-module id="my-greeting">
   <template>
-    <style include="shared-styles"></style>
-    <style>
+    <style include="shared-styles">
       :host {
         display: block;
       }
+
+      span,
+      input {
+        @apply(--paper-font-body2);
+      }
     </style>
-    <h2 class="page-title"><span>{{greeting}}</span></h2>
-    <span class="paper-font-body2">Update text to change the greeting.</span>
+
+    <h1 class="page-title">{{greeting}}</h1>
+    <label for="greeting-input">Update text to change the greeting.</label>
     <!-- Listens for "input" event and sets greeting to <input>.value -->
-    <input class="paper-font-body2" value="{{greeting::input}}">
+    <input id="greeting-input" value="{{greeting::input}}">
   </template>
 
   <script>
-    class MyGreeting {
-      beforeRegister() {
-        this.is = 'my-greeting';
-        this.properties = {
+    (function() {
+      'use strict';
+
+      Polymer({
+        is: 'my-greeting',
+
+        properties: {
           greeting: {
             type: String,
             value: 'Welcome!',
             notify: true
           }
-        };
-      }
-    }
-
-    Polymer(MyGreeting);
+        }
+      });
+    })();
   </script>
-
 </dom-module>
