--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -8,37 +8,76 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 
-<script src="../../bower_components/page/page.js"></script>
+<script src="../bower_components/page/page.js"></script>
 <script>
   window.addEventListener('WebComponentsReady', () => {
 
     // We use Page.js for routing. This is a Micro
     // client-side router inspired by the Express router
     // More info: https://visionmedia.github.io/page.js/
+
+    // Removes end / from app.baseUrl which page.base requires for production
+    if (window.location.port === '') {  // if production
+      page.base(app.baseUrl.replace(/\/$/, ''));
+    }
+
+    // Middleware
+    function scrollToTop(ctx, next) {
+      app.scrollPageToTop();
+      next();
+    }
+
+    function closeDrawer(ctx, next) {
+      app.closeDrawer();
+      next();
+    }
+
+    function setFocus(selected){
+      document.querySelector('section[data-route="' + selected + '"]').focus();
+    }
+
+    // Routes
+    page('*', scrollToTop, closeDrawer, (ctx, next) => {
+      next();
+    });
+
     page('/', () => {
       app.route = 'home';
-      app.scrollPageToTop();
+      setFocus(app.route);
+    });
+
+    page(app.baseUrl, () => {
+      app.route = 'home';
+      setFocus(app.route);
     });
 
     page('/users', () => {
       app.route = 'users';
-      app.scrollPageToTop();
+      setFocus(app.route);
     });
 
     page('/users/:name', data => {
       app.route = 'user-info';
       app.params = data.params;
-      app.scrollPageToTop();
+      setFocus(app.route);
     });
 
     page('/contact', () => {
       app.route = 'contact';
-      app.scrollPageToTop();
+      setFocus(app.route);
+    });
+
+    // 404
+    page('*', () => {
+      app.$.toast.text = 'Can\'t find: ' + window.location.href  + '. Redirected you to Home Page';
+      app.$.toast.show();
+      page.redirect(app.baseUrl);
     });
 
     // add #! before urls
     page({
       hashbang: true
     });
+
   });
 </script>
