--- a/app/test/my-greeting-basic.html
+++ b/app/test/my-greeting-basic.html
@@ -14,11 +14,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
   <title>my-greeting-basic</title>
 
-  <script src="../../bower_components/webcomponentsjs/webcomponents.min.js"></script>
-  <link rel="import" href="../../bower_components/polymer/polymer.html">
-  <script src="../../bower_components/web-component-tester/browser.js"></script>
-  <script src="../../bower_components/test-fixture/test-fixture-mocha.js"></script>
-  <link rel="import" href="../../bower_components/test-fixture/test-fixture.html">
+  <script src="../bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
+  <script src="../bower_components/web-component-tester/browser.js"></script>
 
   <!-- Import the element to test -->
   <link rel="import" href="../elements/my-greeting/my-greeting.html">
@@ -26,24 +23,28 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 </head>
 <body>
 
-<test-fixture id="basic">
-  <template>
-    <my-greeting></my-greeting>
-  </template>
-</test-fixture>
+  <test-fixture id="basic">
+    <template>
+      <my-greeting></my-greeting>
+    </template>
+  </test-fixture>
 
-<script>
-  suite('my-greeting tests', function() {
-    var greeting, header;
-    setup(function() {
-      greeting = fixture('basic');
+  <script>
+
+    suite('my-greeting tests', function() {
+      var greeting, header;
+
+      setup(function() {
+        greeting = fixture('basic');
+      });
+
+      test('Welcome!', function() {
+        header = greeting.$$('h1');
+        assert.equal(header.textContent, 'Welcome!');
+      });
+
     });
-    test('Welcome!', function() {
-      header = greeting.querySelector('h2');
-      assert.equal(header.textContent, 'Welcome!');
-    });
-  });
-</script>
+  </script>
 
 </body>
 </html>
